--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,72 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Spirit Animals Sanctuary</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-</head>
-<body class="mat-typography">
-  <app-root></app-root>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <title>Spirit Animals Sanctuary</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+
+    <!-- ===================================================================== -->
+    <!-- =================== META TAG-URI DE ADĂUGAT ======================= -->
+    <!-- ===================================================================== -->
+
+    <!-- SEO & Descriere Generală -->
+    <meta
+      name="description"
+      content="Spirit Animals Sanctuary este un adăpost vegan dedicat salvării și îngrijirii animalelor. Alătură-te misiunii noastre. Donează, adoptă la distanță sau fii voluntar."
+    />
+    <meta
+      name="keywords"
+      content="sanctuar animale, adopție la distanță, voluntariat, donații animale, adăpost vegan, România, Bucovina"
+    />
+    <meta name="Tanase Theodor" content="Spirit Animals Sanctuary" />
+
+    <!-- Open Graph / Facebook / LinkedIn etc. -->
+    <meta
+      property="og:title"
+      content="Spirit Animals Sanctuary | O a doua șansă pentru fiecare suflet"
+    />
+    <meta
+      property="og:description"
+      content="Alătură-te misiunii noastre de a oferi un refugiu sigur și plin de iubire animalelor salvate. Fiecare gest contează."
+    />
+    <meta
+      property="og:image"
+      content="https://spiritanimals-sanctuary.ro/assets/images/social-preview.jpg"
+    />
+    <meta property="og:url" content="https://spiritanimals-sanctuary.ro" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Spirit Animals Sanctuary" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Spirit Animals Sanctuary | O a doua șansă pentru fiecare suflet"
+    />
+    <meta
+      name="twitter:description"
+      content="Alătură-te misiunii noastre de a oferi un refugiu sigur și plin de iubire animalelor salvate. Fiecare gest contează."
+    />
+    <meta
+      name="twitter:image"
+      content="https://spiritanimals-sanctuary.ro/assets/images/social-preview.jpg"
+    />
+
+    <!-- ===================================================================== -->
+    <!-- ===================================================================== -->
+
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+  </head>
+  <body class="mat-typography">
+    <app-root></app-root>
+  </body>
 </html>
